Only report ReadingList.OfflineVersionDisplayed for URL in Reading List.

Previous behavior was to report for all pages.

BUG=702129

Review-Url: https://codereview.chromium.org/2791263002
Cr-Commit-Position: refs/heads/master@{#461674}

Former-commit-id: 4856780bb75144b6e7df21dcaead690da8e4d08a